[gd_scene load_steps=4 format=3 uid="uid://bwhpp4en8b531"]

[ext_resource type="Script" uid="uid://11ll2276kib1" path="res://market/ui/market_ui.gd" id="1_027u0"]
[ext_resource type="Texture2D" uid="uid://c2d3a7k2l4ivn" path="res://assets/coins/bitcoin.png" id="1_lvauu"]
[ext_resource type="Texture2D" uid="uid://bdpqr7bh6ccjn" path="res://assets/resources/memory/chip_empty.png" id="3_f205t"]

[node name="MarketUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_027u0")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemList" type="ItemList" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_reselect = true
auto_width = true
item_count = 1
fixed_icon_size = Vector2i(32, 32)
item_0/text = "Temp"
item_0/icon = ExtResource("1_lvauu")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CoinName" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Coin Name"

[node name="Icon" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_f205t")
stretch_mode = 4

[node name="Price" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "100"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Quantity" type="HSlider" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 10.0

[node name="QuantityLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "42"

[node name="SellButton" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Sell"
